@@ -1,3 +1,7 @@
+2012-02-03 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* general/main_menu.php: Fixed godmode menu header visualization.
+
 2012-02-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
         * include/graph/functions_fsgraph.php: Fixed a bug in flash charts
